--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-minimal
 title: 👨‍💻📖🎧
 description: Joseph Dawoud's CV
-        
+
+title: Contact Me
+description: 📧 joseph.m.dawoud@gmail.com
+description: 💼 www.linkedin.com/in/jdawoud
