--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/dinky@v0.2.0
-title: 👨‍💻📖🎧
-description: Joseph Dawoud's CV
+title: Joseph Dawoud's CV
+description: 👨‍💻📖🎧
